[package]
name = "relational_ecs"
version = "0.1.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.1"
rustc-hash = "1.0.1"

[[example]]
name = "simple"

[[example]]
name = "galaxy"
